--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"> 
     <title>Busmall</title>
 </head>
 <body>
-    <header>Welocome to the busmall</header>
+    <header>
+        <i class="fas fa-bomb icon"></i>
+        <h4 class = "title">Philosophers Wars</h4>
+    </header>
     <div class="container">
         <h2>Please choose a photo</h2>
         <div class="img-container">
@@ -16,7 +21,10 @@
             <div class="left"></div>
         </div>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.6.1/chart.min.js" integrity="sha512-O2fWHvFel3xjQSi9FyzKXWLTvnom+lOYR/AUEThL/fbP4hv1Lo5LCFCGuTXBRyKC4K4DJldg5kxptkgXAzUpvA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <canvas id="myChart" width="400" height="400"></canvas>
 
+    <footer>Project by Karam Al-Qinneh</footer>
 <script src="js/app.js"></script>
 </body>
 </html>
